--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Mi primer sitio en la web</h1>
+    <h2>Crea tu publicacion</h2>
+    <form class="form-create">
+        <label for="descripcion">Descripcion:</label>
+        <input type="text" id="descripcion" required>
+        <input type="submit" value="Publicar">
+    </form>
+    <div class="publicaciones"></div>
+    <script src="app.js"></script>
 </body>
 </html>
+
